@@ -30,8 +30,8 @@ Module::Build->new(
 		'List::Util'                          => 0,
 		'LWP::UserAgent'                      => 0,
 		'LWP::Protocol::https'                => 0,
-		'Travel::Status::DE::DBRIS'           => '0.02',
-		'Travel::Status::DE::DBRIS::Location' => '0.02',
+		'Travel::Status::DE::DBRIS'           => '0.04',
+		'Travel::Status::DE::DBRIS::Location' => '0.04',
 	},
 	script_files => 'bin/',
 	sign         => 1,
