@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.020;
 
-our $VERSION = '0.02';
+our $VERSION = '0.03';
 
 use utf8;
 use DateTime;
@@ -484,7 +484,7 @@ B<dbris> [B<-d> I<DD.MM.YYYY>] [B<-t> I<HH:MM>] [...] I<from-stop>
 
 =head1 VERSION
 
-version 0.02
+version 0.03
 
 =head1 DESCRIPTION
 
@@ -505,6 +505,11 @@ Default: today.
 =item B<-f>, B<--full-route>
 
 Show intermediate stops rather than just start/end of connection legs.
+
+=item B<--first-class>
+
+Request first class offers.
+Only useful when combined with B<--passengers>.
 
 =item B<-j>, B<--with-jid>
 
@@ -537,6 +542,21 @@ for 90 seconds in F<~/.cache/Travel-Routing-DE-DBRIS> (or a path relative to
 C<$XDG_CACHE_HOME>, if set). Use this option to disable caching. You can use
 B<--cache> to re-enable it.
 
+=item B<-p>, B<--passengers> I<type>[:I<discounts>,...][B<;>I<type>[:I<discounts>,...]B<;>...]
+
+Use the specified passenger information to request ticket offers and show the
+corresponding price for each connection. I<type> must be adult, junior, or
+senior. I<discounts> can be one or more of bc25, bc50, bc100, bc25-first,
+bc50-first, bc100-first. See also B<--first-class>.
+
+Note that B<dbris> only has access to a single offer per connection. It is
+typically the cheapest, but there is no information about what kind of ticket
+it is. Lack of a listed price either means that ticket offers are not available
+or (for bc100) that the connection does not require a ticket. There is no way
+to distinguish between these two cases. B<dbris> does not guarantee accuracy of
+the provided information and must not be relied upon to determine whether a
+given connection is free or not.
+
 =item B<--raw-json>
 
 Print unprocessed API response as JSON and exit.
@@ -546,6 +566,11 @@ Useful for debugging and development purposes.
 
 Request connections on or after I<HH:MM>.
 Default: now.
+
+=item B<-v>, B<--verbose>
+
+Include free-text messages related to delays, platform changes, and other
+quality of service issues or announcements.
 
 =item B<-V>, B<--version>
 
