@@ -15,8 +15,8 @@ apt-get -y install \
 	libtest-compile-perl libtest-pod-perl \
 	libtest-simple-perl
 
-wget https://lib.finalrewind.org/deb/libtravel-status-de-dbris-perl_0.02-1_all.deb
-dpkg -i libtravel-status-de-dbris-perl_0.02-1_all.deb
+wget https://lib.finalrewind.org/deb/libtravel-status-de-dbris-perl_0.04-1_all.deb
+dpkg -i libtravel-status-de-dbris-perl_0.04-1_all.deb
 
 apt-file update
 apt-cache dumpavail | dpkg --merge-avail
